added files of run from notebook 2a with undersampling C.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -194,7 +194,7 @@
    "source": [
     "class Config:\n",
     "    oversample = False #refers to mitbih B_SMOTE\n",
-    "    undersample = False #Refers to undersampling with random undersampler\n",
+    "    undersample = True #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
     "Train_SVM =  True #trains the SVM Model without Gridsearch\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -255,8 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the original mitbih dataset\n",
-      "Sample Name: MITBIH_A_Original\n"
+      "Sample Name: MITBIH_B_SMOTE\n"
      ]
     }
    ],
@@ -277,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "12e9d176",
    "metadata": {},
    "outputs": [],
@@ -309,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "da81ef52",
    "metadata": {
     "execution": {
@@ -331,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "(87554, 187)"
+       "(362355, 187)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -389,29 +388,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9672    0.9982    0.9825     18118\n",
-      "         1.0     0.9632    0.5647    0.7120       556\n",
-      "         2.0     0.9667    0.8626    0.9117      1448\n",
-      "         3.0     0.7500    0.4815    0.5865       162\n",
-      "         4.0     0.9959    0.9111    0.9516      1608\n",
+      "         0.0     0.9911    0.9370    0.9633     18118\n",
+      "         1.0     0.4190    0.8237    0.5555       556\n",
+      "         2.0     0.8901    0.9337    0.9114      1448\n",
+      "         3.0     0.2795    0.9198    0.4288       162\n",
+      "         4.0     0.9716    0.9776    0.9746      1608\n",
       "\n",
-      "    accuracy                         0.9680     21892\n",
-      "   macro avg     0.9286    0.7636    0.8289     21892\n",
-      "weighted avg     0.9676    0.9680    0.9657     21892\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../models/ML_Models/SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[18], line 11\u001b[0m\n\u001b[1;32m      9\u001b[0m     model_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM_Basemodel_no_gridsearch_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mConfig\u001b[38;5;241m.\u001b[39msample_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     10\u001b[0m     report_filename \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM_Basemodel_no_gridsearch_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mConfig\u001b[38;5;241m.\u001b[39msample_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_classification_report.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m---> 11\u001b[0m     \u001b[43msave_model_and_report\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreport\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_filename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mreport_filename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     13\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSVM Model withoud gridsearch is not trained\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[15], line 8\u001b[0m, in \u001b[0;36msave_model_and_report\u001b[0;34m(model, report, model_filename, report_filename, model_folder, report_folder)\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21msave_model_and_report\u001b[39m(model, report, model_filename, report_filename, model_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../models/ML_Models\u001b[39m\u001b[38;5;124m\"\u001b[39m, report_folder\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../reports/figures/ML_Models\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m      6\u001b[0m     \u001b[38;5;66;03m# Check if model file size is greater than 98MB\u001b[39;00m\n\u001b[1;32m      7\u001b[0m     model_savepath \u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(model_folder, model_filename)\n\u001b[0;32m----> 8\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpath\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgetsize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel_savepath\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m98\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1024\u001b[39m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m1024\u001b[39m:  \u001b[38;5;66;03m# Check if size is greater than 98MB\u001b[39;00m\n\u001b[1;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mModel file size is too big. Changing save path...\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m         model_folder \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/models_too_big_for_git\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "File \u001b[0;32m<frozen genericpath>:50\u001b[0m, in \u001b[0;36mgetsize\u001b[0;34m(filename)\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../models/ML_Models/SVM_Basemodel_no_gridsearch_MITBIH_A_Original.pkl'"
+      "    accuracy                         0.9367     21892\n",
+      "   macro avg     0.7103    0.9184    0.7667     21892\n",
+      "weighted avg     0.9632    0.9367    0.9463     21892\n",
+      "\n",
+      "The model was saved as SVM_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -452,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3784bfce",
    "metadata": {
     "execution": {
@@ -477,18 +465,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9777    0.9946    0.9861     18118\n",
-      "         1.0     0.8970    0.6421    0.7484       556\n",
-      "         2.0     0.9395    0.9012    0.9200      1448\n",
-      "         3.0     0.7630    0.6358    0.6936       162\n",
-      "         4.0     0.9941    0.9509    0.9720      1608\n",
+      "         0.0     0.9923    0.9585    0.9752     18118\n",
+      "         1.0     0.5006    0.8147    0.6201       556\n",
+      "         2.0     0.8700    0.9427    0.9049      1448\n",
+      "         3.0     0.4806    0.8395    0.6112       162\n",
+      "         4.0     0.9608    0.9764    0.9685      1608\n",
       "\n",
-      "    accuracy                         0.9736     21892\n",
-      "   macro avg     0.9143    0.8249    0.8640     21892\n",
-      "weighted avg     0.9727    0.9736    0.9725     21892\n",
+      "    accuracy                         0.9543     21892\n",
+      "   macro avg     0.7609    0.9064    0.8160     21892\n",
+      "weighted avg     0.9657    0.9543    0.9583     21892\n",
       "\n",
-      "The model was saved as KNN_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as KNN_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as KNN_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "Model file size is too big. Changing save path...\n",
+      "Model moved to ../data/models_too_big_for_git due to its size.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -528,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "9ba3453f",
    "metadata": {
     "execution": {
@@ -553,18 +543,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9754    0.9743    0.9748     18118\n",
-      "         1.0     0.6374    0.6259    0.6316       556\n",
-      "         2.0     0.8543    0.8667    0.8605      1448\n",
-      "         3.0     0.5690    0.6111    0.5893       162\n",
-      "         4.0     0.9396    0.9384    0.9390      1608\n",
+      "         0.0     0.9813    0.9505    0.9657     18118\n",
+      "         1.0     0.4675    0.7104    0.5639       556\n",
+      "         2.0     0.8104    0.8916    0.8491      1448\n",
+      "         3.0     0.4508    0.6790    0.5419       162\n",
+      "         4.0     0.9193    0.9490    0.9339      1608\n",
       "\n",
-      "    accuracy                         0.9530     21892\n",
-      "   macro avg     0.7951    0.8033    0.7990     21892\n",
-      "weighted avg     0.9532    0.9530    0.9531     21892\n",
+      "    accuracy                         0.9384     21892\n",
+      "   macro avg     0.7259    0.8361    0.7709     21892\n",
+      "weighted avg     0.9485    0.9384    0.9423     21892\n",
       "\n",
-      "The model was saved as DTC_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as DTC_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as DTC_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as DTC_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -604,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "37e1a610",
    "metadata": {
     "execution": {
@@ -629,18 +619,20 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9724    0.9992    0.9857     18118\n",
-      "         1.0     0.9882    0.6043    0.7500       556\n",
-      "         2.0     0.9822    0.8778    0.9271      1448\n",
-      "         3.0     0.8814    0.6420    0.7429       162\n",
-      "         4.0     0.9961    0.9434    0.9690      1608\n",
+      "         0.0     0.9853    0.9939    0.9896     18118\n",
+      "         1.0     0.8735    0.7698    0.8184       556\n",
+      "         2.0     0.9644    0.9351    0.9495      1448\n",
+      "         3.0     0.8041    0.7346    0.7677       162\n",
+      "         4.0     0.9886    0.9677    0.9780      1608\n",
       "\n",
-      "    accuracy                         0.9744     21892\n",
-      "   macro avg     0.9641    0.8133    0.8749     21892\n",
-      "weighted avg     0.9746    0.9744    0.9728     21892\n",
+      "    accuracy                         0.9805     21892\n",
+      "   macro avg     0.9232    0.8802    0.9006     21892\n",
+      "weighted avg     0.9800    0.9805    0.9801     21892\n",
       "\n",
-      "The model was saved as RFC_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as RFC_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as RFC_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "Model file size is too big. Changing save path...\n",
+      "Model moved to ../data/models_too_big_for_git due to its size.\n",
+      "The classification report was saved as RFC_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -680,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "5a866d4e",
    "metadata": {
     "execution": {
@@ -705,18 +697,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9821    0.9976    0.9898     18118\n",
-      "         1.0     0.9406    0.6835    0.7917       556\n",
-      "         2.0     0.9724    0.9240    0.9476      1448\n",
-      "         3.0     0.8788    0.7160    0.7891       162\n",
-      "         4.0     0.9924    0.9726    0.9824      1608\n",
+      "         0.0     0.9894    0.9763    0.9828     18118\n",
+      "         1.0     0.6220    0.8022    0.7007       556\n",
+      "         2.0     0.9325    0.9441    0.9382      1448\n",
+      "         3.0     0.6071    0.8395    0.7047       162\n",
+      "         4.0     0.9826    0.9813    0.9820      1608\n",
       "\n",
-      "    accuracy                         0.9808     21892\n",
-      "   macro avg     0.9532    0.8587    0.9001     21892\n",
-      "weighted avg     0.9804    0.9808    0.9799     21892\n",
+      "    accuracy                         0.9691     21892\n",
+      "   macro avg     0.8267    0.9087    0.8617     21892\n",
+      "weighted avg     0.9730    0.9691    0.9706     21892\n",
       "\n",
-      "The model was saved as XGB_Basemodel_no_gridsearch_MITBIH_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as XGB_Basemodel_no_gridsearch_MITBIH_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as XGB_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as XGB_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
