--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "id": "96a6a1e1",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "c3a84163",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 32,
    "id": "06073fe3",
    "metadata": {
     "execution": {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "71a126b0",
    "metadata": {
     "execution": {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "id": "f3cbb4eb",
    "metadata": {
     "execution": {
@@ -194,7 +194,7 @@
    "source": [
     "class Config:\n",
     "    oversample = False #refers to mitbih B_SMOTE\n",
-    "    undersample = True #Refers to undersampling with random undersampler\n",
+    "    undersample = False #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
     "Train_SVM =  True #trains the SVM Model without Gridsearch\n",
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "045ff622",
    "metadata": {
     "execution": {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 38,
    "id": "303ceae0",
    "metadata": {
     "execution": {
@@ -255,7 +255,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample Name: MITBIH_B_SMOTE\n"
+      "Sample Name: MITBIH_C_RUS\n"
      ]
     }
    ],
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 37,
    "id": "12e9d176",
    "metadata": {},
    "outputs": [],
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "id": "da81ef52",
    "metadata": {
     "execution": {
@@ -330,10 +330,10 @@
     {
      "data": {
       "text/plain": [
-       "(362355, 187)"
+       "(3205, 187)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 42,
    "id": "140181b5",
    "metadata": {
     "execution": {
@@ -388,18 +388,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9911    0.9370    0.9633     18118\n",
-      "         1.0     0.4190    0.8237    0.5555       556\n",
-      "         2.0     0.8901    0.9337    0.9114      1448\n",
-      "         3.0     0.2795    0.9198    0.4288       162\n",
-      "         4.0     0.9716    0.9776    0.9746      1608\n",
+      "         0.0     0.9770    0.8097    0.8855     18118\n",
+      "         1.0     0.2998    0.6817    0.4165       556\n",
+      "         2.0     0.6591    0.8398    0.7385      1448\n",
+      "         3.0     0.0778    0.8951    0.1432       162\n",
+      "         4.0     0.7851    0.9291    0.8510      1608\n",
       "\n",
-      "    accuracy                         0.9367     21892\n",
-      "   macro avg     0.7103    0.9184    0.7667     21892\n",
-      "weighted avg     0.9632    0.9367    0.9463     21892\n",
+      "    accuracy                         0.8179     21892\n",
+      "   macro avg     0.5598    0.8311    0.6070     21892\n",
+      "weighted avg     0.9180    0.8179    0.8559     21892\n",
       "\n",
-      "The model was saved as SVM_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as SVM_Basemodel_no_gridsearch_MITBIH_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_MITBIH_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "id": "3784bfce",
    "metadata": {
     "execution": {
@@ -465,20 +465,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9923    0.9585    0.9752     18118\n",
-      "         1.0     0.5006    0.8147    0.6201       556\n",
-      "         2.0     0.8700    0.9427    0.9049      1448\n",
-      "         3.0     0.4806    0.8395    0.6112       162\n",
-      "         4.0     0.9608    0.9764    0.9685      1608\n",
+      "         0.0     0.9822    0.7693    0.8628     18118\n",
+      "         1.0     0.1821    0.7518    0.2931       556\n",
+      "         2.0     0.5694    0.8191    0.6718      1448\n",
+      "         3.0     0.0967    0.9074    0.1748       162\n",
+      "         4.0     0.8323    0.9322    0.8794      1608\n",
       "\n",
-      "    accuracy                         0.9543     21892\n",
-      "   macro avg     0.7609    0.9064    0.8160     21892\n",
-      "weighted avg     0.9657    0.9543    0.9583     21892\n",
+      "    accuracy                         0.7852     21892\n",
+      "   macro avg     0.5325    0.8360    0.5764     21892\n",
+      "weighted avg     0.9170    0.7852    0.8319     21892\n",
       "\n",
-      "The model was saved as KNN_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "Model file size is too big. Changing save path...\n",
-      "Model moved to ../data/models_too_big_for_git due to its size.\n",
-      "The classification report was saved as KNN_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as KNN_Basemodel_no_gridsearch_MITBIH_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_MITBIH_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -518,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "id": "9ba3453f",
    "metadata": {
     "execution": {
@@ -543,18 +541,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9813    0.9505    0.9657     18118\n",
-      "         1.0     0.4675    0.7104    0.5639       556\n",
-      "         2.0     0.8104    0.8916    0.8491      1448\n",
-      "         3.0     0.4508    0.6790    0.5419       162\n",
-      "         4.0     0.9193    0.9490    0.9339      1608\n",
+      "         0.0     0.9810    0.6933    0.8125     18118\n",
+      "         1.0     0.1296    0.7410    0.2206       556\n",
+      "         2.0     0.5136    0.7956    0.6242      1448\n",
+      "         3.0     0.0949    0.8704    0.1712       162\n",
+      "         4.0     0.6729    0.9123    0.7746      1608\n",
       "\n",
-      "    accuracy                         0.9384     21892\n",
-      "   macro avg     0.7259    0.8361    0.7709     21892\n",
-      "weighted avg     0.9485    0.9384    0.9423     21892\n",
+      "    accuracy                         0.7187     21892\n",
+      "   macro avg     0.4784    0.8025    0.5206     21892\n",
+      "weighted avg     0.8993    0.7187    0.7775     21892\n",
       "\n",
-      "The model was saved as DTC_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as DTC_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as DTC_Basemodel_no_gridsearch_MITBIH_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as DTC_Basemodel_no_gridsearch_MITBIH_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -594,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 43,
    "id": "37e1a610",
    "metadata": {
     "execution": {
@@ -619,20 +617,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9853    0.9939    0.9896     18118\n",
-      "         1.0     0.8735    0.7698    0.8184       556\n",
-      "         2.0     0.9644    0.9351    0.9495      1448\n",
-      "         3.0     0.8041    0.7346    0.7677       162\n",
-      "         4.0     0.9886    0.9677    0.9780      1608\n",
+      "         0.0     0.9865    0.8517    0.9142     18118\n",
+      "         1.0     0.2735    0.7968    0.4072       556\n",
+      "         2.0     0.7317    0.8812    0.7995      1448\n",
+      "         3.0     0.1337    0.9012    0.2329       162\n",
+      "         4.0     0.8533    0.9515    0.8997      1608\n",
       "\n",
-      "    accuracy                         0.9805     21892\n",
-      "   macro avg     0.9232    0.8802    0.9006     21892\n",
-      "weighted avg     0.9800    0.9805    0.9801     21892\n",
+      "    accuracy                         0.8600     21892\n",
+      "   macro avg     0.5957    0.8765    0.6507     21892\n",
+      "weighted avg     0.9355    0.8600    0.8876     21892\n",
       "\n",
-      "The model was saved as RFC_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "Model file size is too big. Changing save path...\n",
-      "Model moved to ../data/models_too_big_for_git due to its size.\n",
-      "The classification report was saved as RFC_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as RFC_Basemodel_no_gridsearch_MITBIH_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as RFC_Basemodel_no_gridsearch_MITBIH_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -672,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "id": "5a866d4e",
    "metadata": {
     "execution": {
@@ -697,18 +693,18 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9894    0.9763    0.9828     18118\n",
-      "         1.0     0.6220    0.8022    0.7007       556\n",
-      "         2.0     0.9325    0.9441    0.9382      1448\n",
-      "         3.0     0.6071    0.8395    0.7047       162\n",
-      "         4.0     0.9826    0.9813    0.9820      1608\n",
+      "         0.0     0.9892    0.8345    0.9053     18118\n",
+      "         1.0     0.2268    0.8291    0.3561       556\n",
+      "         2.0     0.7045    0.9054    0.7924      1448\n",
+      "         3.0     0.1588    0.8951    0.2698       162\n",
+      "         4.0     0.8556    0.9577    0.9038      1608\n",
       "\n",
-      "    accuracy                         0.9691     21892\n",
-      "   macro avg     0.8267    0.9087    0.8617     21892\n",
-      "weighted avg     0.9730    0.9691    0.9706     21892\n",
+      "    accuracy                         0.8486     21892\n",
+      "   macro avg     0.5870    0.8844    0.6455     21892\n",
+      "weighted avg     0.9350    0.8486    0.8791     21892\n",
       "\n",
-      "The model was saved as XGB_Basemodel_no_gridsearch_MITBIH_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as XGB_Basemodel_no_gridsearch_MITBIH_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as XGB_Basemodel_no_gridsearch_MITBIH_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as XGB_Basemodel_no_gridsearch_MITBIH_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
