--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -24,10 +24,6 @@
    },
    "outputs": [],
    "source": [
-    "# This Python 3 environment comes with many helpful analytics libraries installed\n",
-    "# It is defined by the kaggle/python Docker image: https://github.com/kaggle/docker-python\n",
-    "# For example, here's several helpful packages to load\n",
-    "\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -42,16 +38,7 @@
     "from sklearn.neighbors import KNeighborsClassifier as KNN\n",
     "import xgboost as XGB\n",
     "\n",
-    "# Input data files are available in the read-only \"../input/\" directory\n",
-    "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-    "\n",
-    "import os\n",
-    "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-    "    for filename in filenames:\n",
-    "        print(os.path.join(dirname, filename))\n",
-    "\n",
-    "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-    "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+    "import os\n"
    ]
   },
   {
@@ -134,6 +121,7 @@
    },
    "outputs": [],
    "source": [
+    "#only 4 digits are printed out by numpy calculations.\n",
     "np.set_printoptions(precision=4)"
    ]
   },
@@ -192,6 +180,7 @@
    },
    "outputs": [],
    "source": [
+    "#Switches for the user to define which sample method is used and which models are run.\n",
     "class Config:\n",
     "    oversample = False #refers to mitbih B_SMOTE\n",
     "    undersample = False #Refers to undersampling with random undersampler\n",
@@ -260,6 +249,7 @@
     }
    ],
    "source": [
+    "#Based on the user settings, Resampling is done and the sample name (i.e. filenames) are modified.\n",
     "if Config.oversample:\n",
     "    train, train_target = oversampler.fit_resample(df_train.iloc[:,:-1], df_train.iloc[:,-1])\n",
     "    Config.sample_name = \"MITBIH_B_SMOTE\"\n",
@@ -289,7 +279,7 @@
     "        pickle.dump(model, f)\n",
     "    print(f\"The model was saved as {model_filename} in folder {model_folder}.\")\n",
     "\n",
-    "    # Check if model file size is greater than 98MB\n",
+    "    # Check if model file size is greater than 98MB (Restriction for github only!)\n",
     "    if os.path.getsize(model_savepath) > 98 * 1024 * 1024:  # Check if size is greater than 98MB\n",
     "        print(\"Model file size is too big. Changing save path...\")\n",
     "        model_folder = \"../data/models_too_big_for_git\"\n",
