--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "5ee4ebc0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "ed72fbf6",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/simon/.kaggle/kaggle.json'\n",
       "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /home/simon/.kaggle/kaggle.json'\n",
       "All Datasets are already available.\n"
      ]
@@ -102,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "a63a020a",
    "metadata": {
     "execution": {
@@ -128,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "eb7976fd",
    "metadata": {
     "execution": {
@@ -167,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "id": "b47f4078",
    "metadata": {
     "execution": {
@@ -202,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "id": "cd5480da",
    "metadata": {
     "execution": {
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "id": "76f8e1da",
    "metadata": {
     "execution": {
@@ -246,7 +245,16 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using the original PTBDB dataset\n",
+      "Sample Name: PTBDB_A_Original\n"
+     ]
+    }
+   ],
    "source": [
     "#Based on the user settings, Resampling is done and the sample name (i.e. filenames) are modified.\n",
     "if Config.oversample:\n",
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "cf34119c",
    "metadata": {},
    "outputs": [],
@@ -296,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "45018274",
    "metadata": {
     "execution": {
@@ -318,10 +326,10 @@
     {
      "data": {
       "text/plain": [
-       "(16800, 187)"
+       "(11641, 187)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,10 +359,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "563b6a4b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.8743    0.8037    0.8375       805\n",
+      "         1.0     0.9272    0.9558    0.9413      2106\n",
+      "\n",
+      "    accuracy                         0.9138      2911\n",
+      "   macro avg     0.9008    0.8798    0.8894      2911\n",
+      "weighted avg     0.9126    0.9138    0.9126      2911\n",
+      "\n",
+      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
    "source": [
     "#Just the code for model creation, fitting and creating the report out of the predictions.\n",
     "if Train_SVM == True:\n",
@@ -383,10 +409,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "ece6adb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.8550    0.9081    0.8807       805\n",
+      "         1.0     0.9640    0.9411    0.9524      2106\n",
+      "\n",
+      "    accuracy                         0.9320      2911\n",
+      "   macro avg     0.9095    0.9246    0.9166      2911\n",
+      "weighted avg     0.9339    0.9320    0.9326      2911\n",
+      "\n",
+      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
    "source": [
     "if Train_KNN == True:\n",
     "    model = KNN(n_jobs = -1)\n",
@@ -414,10 +458,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "a3219cb8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.8694    0.8683    0.8689       805\n",
+      "         1.0     0.9497    0.9501    0.9499      2106\n",
+      "\n",
+      "    accuracy                         0.9275      2911\n",
+      "   macro avg     0.9095    0.9092    0.9094      2911\n",
+      "weighted avg     0.9275    0.9275    0.9275      2911\n",
+      "\n",
+      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
    "source": [
     "if Train_DTC == True:\n",
     "    model = DTC()\n",
@@ -445,10 +507,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e063687d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.9750    0.9217    0.9476       805\n",
+      "         1.0     0.9707    0.9910    0.9807      2106\n",
+      "\n",
+      "    accuracy                         0.9718      2911\n",
+      "   macro avg     0.9729    0.9564    0.9642      2911\n",
+      "weighted avg     0.9719    0.9718    0.9716      2911\n",
+      "\n",
+      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
    "source": [
     "if Train_RF == True:\n",
     "    model = RFC(n_jobs = -1)\n",
@@ -476,10 +556,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "ed7698c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0     0.9710    0.9553    0.9631       805\n",
+      "         1.0     0.9830    0.9891    0.9860      2106\n",
+      "\n",
+      "    accuracy                         0.9797      2911\n",
+      "   macro avg     0.9770    0.9722    0.9745      2911\n",
+      "weighted avg     0.9797    0.9797    0.9797      2911\n",
+      "\n",
+      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+     ]
+    }
+   ],
    "source": [
     "if Train_XGB == True:\n",
     "    model = XGB.XGBClassifier(objective='binary:logistic')\n",
