--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "5ee4ebc0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "ed72fbf6",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "a63a020a",
    "metadata": {
     "execution": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "eb7976fd",
    "metadata": {
     "execution": {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "b47f4078",
    "metadata": {
     "execution": {
@@ -188,7 +188,7 @@
    "source": [
     "#Switches for the user to define which sample method is used and which models are run.\n",
     "class Config:\n",
-    "    oversample = False #refers to PTBDB B_SMOTE\n",
+    "    oversample = True #refers to PTBDB B_SMOTE\n",
     "    undersample = False #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "id": "cd5480da",
    "metadata": {
     "execution": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "76f8e1da",
    "metadata": {
     "execution": {
@@ -250,19 +250,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using the original PTBDB dataset\n",
-      "Sample Name: PTBDB_A_Original\n"
+      "Sample Name: PTBDB_B_SMOTE\n"
      ]
     }
    ],
    "source": [
     "#Based on the user settings, Resampling is done and the sample name (i.e. filenames) are modified.\n",
     "if Config.oversample:\n",
-    "    train, train_target = oversampler.fit_resample(df_train.iloc[:,:-1], df_train.iloc[:,-1])\n",
+    "    train, train_target = oversampler.fit_resample(train, train_target)\n",
     "    Config.sample_name = \"PTBDB_B_SMOTE\"\n",
     "    print(\"Sample Name:\", Config.sample_name)\n",
     "elif Config.undersample:\n",
-    "    train, train_target = undersampler.fit_resample(df_train.iloc[:,:-1], df_train.iloc[:,-1])\n",
+    "    train, train_target = undersampler.fit_resample(train, train_target)\n",
     "    Config.sample_name = \"PTBDB_C_RUS\"\n",
     "    print(\"Sample Name:\", Config.sample_name)\n",
     "else: \n",
@@ -273,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 15,
    "id": "cf34119c",
    "metadata": {},
    "outputs": [],
@@ -304,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "45018274",
    "metadata": {
     "execution": {
@@ -326,10 +325,10 @@
     {
      "data": {
       "text/plain": [
-       "(11641, 187)"
+       "(16800, 187)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,15 +368,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.8743    0.8037    0.8375       805\n",
-      "         1.0     0.9272    0.9558    0.9413      2106\n",
+      "         0.0     0.7723    0.9267    0.8425       805\n",
+      "         1.0     0.9697    0.8955    0.9311      2106\n",
       "\n",
-      "    accuracy                         0.9138      2911\n",
-      "   macro avg     0.9008    0.8798    0.8894      2911\n",
-      "weighted avg     0.9126    0.9138    0.9126      2911\n",
+      "    accuracy                         0.9042      2911\n",
+      "   macro avg     0.8710    0.9111    0.8868      2911\n",
+      "weighted avg     0.9151    0.9042    0.9066      2911\n",
       "\n",
-      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -419,15 +418,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.8550    0.9081    0.8807       805\n",
-      "         1.0     0.9640    0.9411    0.9524      2106\n",
+      "         0.0     0.7906    0.9615    0.8677       805\n",
+      "         1.0     0.9840    0.9027    0.9416      2106\n",
       "\n",
-      "    accuracy                         0.9320      2911\n",
-      "   macro avg     0.9095    0.9246    0.9166      2911\n",
-      "weighted avg     0.9339    0.9320    0.9326      2911\n",
+      "    accuracy                         0.9189      2911\n",
+      "   macro avg     0.8873    0.9321    0.9046      2911\n",
+      "weighted avg     0.9305    0.9189    0.9211      2911\n",
       "\n",
-      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -458,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "a3219cb8",
    "metadata": {},
    "outputs": [
@@ -468,15 +467,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.8694    0.8683    0.8689       805\n",
-      "         1.0     0.9497    0.9501    0.9499      2106\n",
+      "         0.0     0.8501    0.8733    0.8615       805\n",
+      "         1.0     0.9511    0.9411    0.9461      2106\n",
       "\n",
-      "    accuracy                         0.9275      2911\n",
-      "   macro avg     0.9095    0.9092    0.9094      2911\n",
-      "weighted avg     0.9275    0.9275    0.9275      2911\n",
+      "    accuracy                         0.9224      2911\n",
+      "   macro avg     0.9006    0.9072    0.9038      2911\n",
+      "weighted avg     0.9231    0.9224    0.9227      2911\n",
       "\n",
-      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -507,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "e063687d",
    "metadata": {},
    "outputs": [
@@ -517,15 +516,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9750    0.9217    0.9476       805\n",
-      "         1.0     0.9707    0.9910    0.9807      2106\n",
+      "         0.0     0.9503    0.9503    0.9503       805\n",
+      "         1.0     0.9810    0.9810    0.9810      2106\n",
       "\n",
-      "    accuracy                         0.9718      2911\n",
-      "   macro avg     0.9729    0.9564    0.9642      2911\n",
-      "weighted avg     0.9719    0.9718    0.9716      2911\n",
+      "    accuracy                         0.9725      2911\n",
+      "   macro avg     0.9657    0.9657    0.9657      2911\n",
+      "weighted avg     0.9725    0.9725    0.9725      2911\n",
       "\n",
-      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -556,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "ed7698c3",
    "metadata": {},
    "outputs": [
@@ -566,15 +565,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9710    0.9553    0.9631       805\n",
-      "         1.0     0.9830    0.9891    0.9860      2106\n",
+      "         0.0     0.9493    0.9540    0.9517       805\n",
+      "         1.0     0.9824    0.9805    0.9815      2106\n",
       "\n",
-      "    accuracy                         0.9797      2911\n",
-      "   macro avg     0.9770    0.9722    0.9745      2911\n",
-      "weighted avg     0.9797    0.9797    0.9797      2911\n",
+      "    accuracy                         0.9732      2911\n",
+      "   macro avg     0.9659    0.9673    0.9666      2911\n",
+      "weighted avg     0.9733    0.9732    0.9732      2911\n",
       "\n",
-      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_A_Original.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_A_Original_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
