Notebook 2b run with C_RUS. Notebook 2a and 2b uploaded aswell (no changes aside from switching user settings.).

--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "id": "5ee4ebc0",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "id": "ed72fbf6",
    "metadata": {},
    "outputs": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "id": "a63a020a",
    "metadata": {
     "execution": {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 25,
    "id": "eb7976fd",
    "metadata": {
     "execution": {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "b47f4078",
    "metadata": {
     "execution": {
@@ -188,8 +188,8 @@
    "source": [
     "#Switches for the user to define which sample method is used and which models are run.\n",
     "class Config:\n",
-    "    oversample = True #refers to PTBDB B_SMOTE\n",
-    "    undersample = False #Refers to undersampling with random undersampler\n",
+    "    oversample = False #refers to PTBDB B_SMOTE\n",
+    "    undersample = True #Refers to undersampling with random undersampler\n",
     "    sample_name = \"UNDEFINED_SAMPLE\"\n",
     "\n",
     "Train_SVM =  True #trains the SVM Model without Gridsearch\n",
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "cd5480da",
    "metadata": {
     "execution": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "76f8e1da",
    "metadata": {
     "execution": {
@@ -250,7 +250,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sample Name: PTBDB_B_SMOTE\n"
+      "Sample Name: PTBDB_C_RUS\n"
      ]
     }
    ],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "id": "cf34119c",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "45018274",
    "metadata": {
     "execution": {
@@ -325,10 +325,10 @@
     {
      "data": {
       "text/plain": [
-       "(16800, 187)"
+       "(6482, 187)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "563b6a4b",
    "metadata": {},
    "outputs": [
@@ -368,15 +368,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.7723    0.9267    0.8425       805\n",
-      "         1.0     0.9697    0.8955    0.9311      2106\n",
+      "         0.0     0.6893    0.9342    0.7932       805\n",
+      "         1.0     0.9709    0.8390    0.9002      2106\n",
       "\n",
-      "    accuracy                         0.9042      2911\n",
-      "   macro avg     0.8710    0.9111    0.8868      2911\n",
-      "weighted avg     0.9151    0.9042    0.9066      2911\n",
+      "    accuracy                         0.8653      2911\n",
+      "   macro avg     0.8301    0.8866    0.8467      2911\n",
+      "weighted avg     0.8930    0.8653    0.8706      2911\n",
       "\n",
-      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as SVM_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as SVM_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "id": "ece6adb9",
    "metadata": {},
    "outputs": [
@@ -418,15 +418,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.7906    0.9615    0.8677       805\n",
-      "         1.0     0.9840    0.9027    0.9416      2106\n",
+      "         0.0     0.6919    0.9540    0.8021       805\n",
+      "         1.0     0.9795    0.8376    0.9030      2106\n",
       "\n",
-      "    accuracy                         0.9189      2911\n",
-      "   macro avg     0.8873    0.9321    0.9046      2911\n",
-      "weighted avg     0.9305    0.9189    0.9211      2911\n",
+      "    accuracy                         0.8698      2911\n",
+      "   macro avg     0.8357    0.8958    0.8525      2911\n",
+      "weighted avg     0.8999    0.8698    0.8751      2911\n",
       "\n",
-      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as KNN_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as KNN_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "id": "a3219cb8",
    "metadata": {},
    "outputs": [
@@ -467,15 +467,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.8501    0.8733    0.8615       805\n",
-      "         1.0     0.9511    0.9411    0.9461      2106\n",
+      "         0.0     0.7564    0.9106    0.8264       805\n",
+      "         1.0     0.9629    0.8879    0.9239      2106\n",
       "\n",
-      "    accuracy                         0.9224      2911\n",
-      "   macro avg     0.9006    0.9072    0.9038      2911\n",
-      "weighted avg     0.9231    0.9224    0.9227      2911\n",
+      "    accuracy                         0.8942      2911\n",
+      "   macro avg     0.8597    0.8992    0.8751      2911\n",
+      "weighted avg     0.9058    0.8942    0.8969      2911\n",
       "\n",
-      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as DTC_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as DTC_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "id": "e063687d",
    "metadata": {},
    "outputs": [
@@ -516,15 +516,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9503    0.9503    0.9503       805\n",
-      "         1.0     0.9810    0.9810    0.9810      2106\n",
+      "         0.0     0.8624    0.9652    0.9109       805\n",
+      "         1.0     0.9861    0.9411    0.9631      2106\n",
       "\n",
-      "    accuracy                         0.9725      2911\n",
-      "   macro avg     0.9657    0.9657    0.9657      2911\n",
-      "weighted avg     0.9725    0.9725    0.9725      2911\n",
+      "    accuracy                         0.9478      2911\n",
+      "   macro avg     0.9242    0.9532    0.9370      2911\n",
+      "weighted avg     0.9519    0.9478    0.9486      2911\n",
       "\n",
-      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as RFC_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as RFC_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "id": "ed7698c3",
    "metadata": {},
    "outputs": [
@@ -565,15 +565,15 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0     0.9493    0.9540    0.9517       805\n",
-      "         1.0     0.9824    0.9805    0.9815      2106\n",
+      "         0.0     0.9106    0.9739    0.9412       805\n",
+      "         1.0     0.9898    0.9634    0.9764      2106\n",
       "\n",
-      "    accuracy                         0.9732      2911\n",
-      "   macro avg     0.9659    0.9673    0.9666      2911\n",
-      "weighted avg     0.9733    0.9732    0.9732      2911\n",
+      "    accuracy                         0.9663      2911\n",
+      "   macro avg     0.9502    0.9687    0.9588      2911\n",
+      "weighted avg     0.9679    0.9663    0.9667      2911\n",
       "\n",
-      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_B_SMOTE.pkl in folder ../models/ML_Models.\n",
-      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_B_SMOTE_classification_report.txt in folder ../reports/figures/ML_Models.\n"
+      "The model was saved as XGB_Basemodel_no_gridsearch_PTBDB_C_RUS.pkl in folder ../models/ML_Models.\n",
+      "The classification report was saved as XGB_Basemodel_no_gridsearch_PTBDB_C_RUS_classification_report.txt in folder ../reports/figures/ML_Models.\n"
      ]
     }
    ],
