--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -745,7 +745,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   },
   "papermill": {
    "default_parameters": {},
