notebooks adapted to latest changes, nothing  drastically changed.

--- a/notebooks/2a_MLmodels_MITBIH.ipynb
+++ b/notebooks/2a_MLmodels_MITBIH.ipynb
@@ -346,9 +346,7 @@
     "tags": []
    },
    "source": [
-    "# **SVM**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **SVM**\n"
    ]
   },
   {
@@ -423,9 +421,7 @@
     "tags": []
    },
    "source": [
-    "# **KNN**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **KNN**\n"
    ]
   },
   {
@@ -499,9 +495,7 @@
     "tags": []
    },
    "source": [
-    "# **Decision Tree**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **Decision Tree**\n"
    ]
   },
   {
@@ -575,9 +569,7 @@
     "tags": []
    },
    "source": [
-    "# **Random Forest**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **Random Forest**\n"
    ]
   },
   {
@@ -651,9 +643,7 @@
     "tags": []
    },
    "source": [
-    "# **XGBoost**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **XGBoost**\n"
    ]
   },
   {
