--- a/notebooks/2b_MLmodels_PTBDB.ipynb
+++ b/notebooks/2b_MLmodels_PTBDB.ipynb
@@ -351,9 +351,7 @@
     "tags": []
    },
    "source": [
-    "# **SVM**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **SVM**\n"
    ]
   },
   {
@@ -401,9 +399,7 @@
    "id": "c7f4bb81",
    "metadata": {},
    "source": [
-    "# **KNN**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **KNN**\n"
    ]
   },
   {
@@ -450,9 +446,7 @@
    "id": "e5682fbe",
    "metadata": {},
    "source": [
-    "# **Decision Tree**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **Decision Tree**"
    ]
   },
   {
@@ -499,9 +493,7 @@
    "id": "4816091b",
    "metadata": {},
    "source": [
-    "# **Random Forest**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **Random Forest**\n"
    ]
   },
   {
@@ -548,9 +540,7 @@
    "id": "18561269",
    "metadata": {},
    "source": [
-    "# **XGBoost**\n",
-    "\n",
-    "<font color='red'>PUT SOME NOTES / EXPLANATORY WORDS AS TEAM HERE IF NEEDED</font>"
+    "# **XGBoost**\n"
    ]
   },
   {
